Save before a big problem

--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -96,6 +96,7 @@
 % Command to horizontal cenetr the table contents
 \newcolumntype{P}[1]{>{\centering\arraybackslash}m{#1}}
 \captionsetup[figure]{labelfont=bf,format=hang}
+\captionsetup[table]{labelfont=bf,format=hang}
 % Command for Offline symbol 
 \newcommand{\Offline}{\mbox{$\overline{\textrm{Off}}$\hspace{.05em}%
     \raisebox{.4ex}{$\underline{\textrm{line}}$}}}
