--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -198,13 +198,13 @@ Neutrinos can help to understand various astrophysical processes such as the Big
 
 \subsection{Origin and Propagation}
 \label{subsec:nuorig}
-UHE$\nu_s$ can be broadly classified into three categories based on their origin. These are astrophysical, originating from known/hypothesized astrophysical sources, cosmogenic, originating from the interactions of \glspl{UHECR} with the \gls{CMB} or the \gls{EBL} and exotic, emerging from processes such as the Big Bang, dark matter annihilation etc. The reactions for the mentioned processes are as follows:
+UHE$\nu$s can be broadly classified into three categories based on their origin. These are astrophysical, originating from known/hypothesized astrophysical sources, cosmogenic, originating from the interactions of \glspl{UHECR} with the \gls{CMB} or the \gls{EBL} and exotic, emerging from processes such as the Big Bang, dark matter annihilation etc. The reactions for the mentioned processes are as follows:
 
 
 \subsubsection*{Astrophysical Neutrinos}
 \label{subsubsec:AstroNu}
 
-Astrophysical neutrinos are thought to be produced by or around known sources of \glspl{UHECR}. The most important ingredients that are required to produce UHE$\nu_s$ are the interactions of high-energy protons and nuclei with matter or radiation fields which result in photo-meson production followed by a charged pion decay. The decay length of pions is much shorter than the distances of the sources to Earth thus they decay and give rise to secondary neutrinos. 
+Astrophysical neutrinos are thought to be produced by or around known sources of \glspl{UHECR}. The most important ingredients that are required to produce UHE$\nu$s are the interactions of high-energy protons and nuclei with matter or radiation fields which result in photo-meson production followed by a charged pion decay. The decay length of pions is much shorter than the distances of the sources to Earth thus they decay and give rise to secondary neutrinos. 
 
 \begin{subequations}\label{eq:Nuprod_1}
   \begin{align}
@@ -242,7 +242,7 @@ Another important aspect to fully understand the origin and propagation of astro
   \left\langle E_{\nu} \right\rangle  \simeq  \frac{1}{2}\left\langle E_{\gamma} \right\rangle \simeq  \frac{1}{20}\left\langle E_{N} \right\rangle
   \end{equation}
 
-Depending on the type of source and how far the said source is one can calculate the maximum energy potential for sources. With the measurement of the diffused astrophysical flux~\cite{PhysRevD.110.022001} by IceCube up to $10^{16}$eV, these calculations can be directly constrained by measurement~\cite{Abbasi_2023_supernova_emission}. Since extragalactic sources can produce \glspl{UHECR} up to $\sim 10^{20}$eV which is corroborated by measurements of the Pierre Auger Observatory one can calculate an upper limit to the diffuse flux for neutrinos. Some of these calculations can be found in ~\cite{Condorelli_2023_starburst} for Starburst galaxies, ~\cite{Murase_2023}for AGNs and ~\cite{2003ApJ...595..346Z} for Magnetars. The non-detection of UHE$\nu_s$ at Auger can thus also act as an important tool to constrain the production mechanisms hypothesized for these sources. The potential of this is discussed later in section~\ref{subsec:Nuresults}.   
+Depending on the type of source and how far the said source is one can calculate the maximum energy potential for sources. With the measurement of the diffused astrophysical flux~\cite{PhysRevD.110.022001} by IceCube up to $10^{16}$eV, these calculations can be directly constrained by measurement~\cite{Abbasi_2023_supernova_emission}. Since extragalactic sources can produce \glspl{UHECR} up to $\sim 10^{20}$eV which is corroborated by measurements of the Pierre Auger Observatory one can calculate an upper limit to the diffuse flux for neutrinos. Some of these calculations can be found in ~\cite{Condorelli_2023_starburst} for Starburst galaxies, ~\cite{Murase_2023}for AGNs and ~\cite{2003ApJ...595..346Z} for Magnetars. The non-detection of UHE$\nu$s at Auger can thus also act as an important tool to constrain the production mechanisms hypothesized for these sources. The potential of this is discussed later in section~\ref{subsec:Nuresults}.   
 
 \subsubsection*{Cosmogenic Neutrinos}
 \label{subsubsec:CosmoNu}
@@ -288,7 +288,7 @@ Antineutrinos can also interact with atomic electrons leading to a $W^-$ boson p
   N_{\nu} \sim N_N \times \sigma_{\nu N} \times \frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{\text{yr}} \times \frac{V}{1\,\mathrm{km^3}}
 \end{equation}
 
-Therefore, to detect a neutrino at this energy range a detector with a minimum size of 1km$^3$ is required. The type of such large volume detectors for UHE$\nu_s$ depends on the particular techniques used to detect the products of neutrino interaction with nucleon. 
+Therefore, to detect a neutrino at this energy range a detector with a minimum size of 1km$^3$ is required. The type of such large volume detectors for UHE$\nu$s depends on the particular techniques used to detect the products of neutrino interaction with nucleon. 
 
 
 The charged lepton can produce detectable signals via ionization, Cherenkov radiation or scintillation. Moreover, the lepton and hadrons can also trigger EASs which can also be detected. Both the lepton and the hadron can lead to a cascade. Depending on the flavor of the neutrino the interaction also leads to unique signals. The electron produced in the CC interaction of $\nu_e$ produces electromagnetic cascades in the propagation medium while a muon rarely produces a cascade like signature only undergoing radiation losses. In contrast, a tau lepton produced from $\nu_{\tau}$ can propagate without interaction for a certain distance and then lead to a cascade. For NC reactions the leptonic cascade is missing and only a hadronic cascade can be observed. Low-energy neutrinos or neutrinos produced in the atmosphere can also lead to similar cascades and act as background for high-energy neutrino searches. Depending on the location and techniques employed such background is dealt with in different ways. Some examples of different detectors based on the medium and the methodology employed for detection are as follows:
@@ -304,7 +304,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
   
   Radar Echo Telescope~\cite{Prohira_2021} is a detector that aims to detect neutrinos using the radar echo method. The method is based on the reflection of a transmitted radar signal by the in ice neutrino cascade which acts as a short-lived mirror. The reflected signal is then detected at a receiving antenna. This technique is currently being tested in Greenland for Cosmic ray showers and might be employed to detect neutrinos in the future.
 
-  \item $-$ \textbf{Air Shower Detectors}: Even though, the typical interaction lengths of UHE$\nu_s$ are way larger than the atmospheric depth the neutrinos can still induce an EAS. Such EASs develop deep into the atmosphere in comparison to \glspl{CR} offering a distinguishing aspect for detection at \gls{CR} observatories like the Pierre Auger Observatory. Pierre Auger Observatory tries to use the said property to observe EeV neutrinos. EASs and the expected signature at the Pierre Auger Observatory for both \glspl{CR} and neutrinos are discussed in the next Chapter~\ref{chap:EAS}.   
+  \item $-$ \textbf{Air Shower Detectors}: Even though, the typical interaction lengths of UHE$\nu$s are way larger than the atmospheric depth the neutrinos can still induce an EAS. Such EASs develop deep into the atmosphere in comparison to \glspl{CR} offering a distinguishing aspect for detection at \gls{CR} observatories like the Pierre Auger Observatory. Pierre Auger Observatory tries to use the said property to observe EeV neutrinos. EASs and the expected signature at the Pierre Auger Observatory for both \glspl{CR} and neutrinos are discussed in the next Chapter~\ref{chap:EAS}.   
 
   \end{description}
 
@@ -357,7 +357,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 
   \paragraph{Limits}
   \label{subsubsec:CosmoNuLimits}
-  Both the Pierre Auger Observatory and the IceCube neutrino Observatory have also performed searches to look for UHE$\nu_s$ which have a cosmogenic origin. These searches have led to some of the stringiest limits for such fluxes. These limits are shown in fig~\ref{fig:Nu_limits_auger}. The results from the Pierre Auger Observatory dominate for energies above $10^{18}$eV and for lower energies, IceCube provides the best limits. The lack of observations can help constrain various models for high-energy neutrino production. These results can also help better our understanding of \gls{CR} physics and in particular their composition. The lack of observation of the expected neutrino flux predicted by a pure proton composition scenario for \glspl{CR} is an important result in favor of mixed composition scenarios. This result further points towards the spectrum cutoff being more likely due to a maximum rigidity limit for the sources rather than a GZK limitation. The detection of cosmogenic neutrinos can help complete the picture of the neutrino and \gls{CR} sky. 
+  Both the Pierre Auger Observatory and the IceCube neutrino Observatory have also performed searches to look for UHE$\nu$s which have a cosmogenic origin. These searches have led to some of the stringiest limits for such fluxes. These limits are shown in fig~\ref{fig:Nu_limits_auger}. The results from the Pierre Auger Observatory dominate for energies above $10^{18}$eV and for lower energies, IceCube provides the best limits. The lack of observations can help constrain various models for high-energy neutrino production. These results can also help better our understanding of \gls{CR} physics and in particular their composition. The lack of observation of the expected neutrino flux predicted by a pure proton composition scenario for \glspl{CR} is an important result in favor of mixed composition scenarios. This result further points towards the spectrum cutoff being more likely due to a maximum rigidity limit for the sources rather than a GZK limitation. The detection of cosmogenic neutrinos can help complete the picture of the neutrino and \gls{CR} sky. 
 
 \begin{figure}[t!]
   \centering
