--- a/thesis_skel/thesis_appendix_C.tex
+++ b/thesis_skel/thesis_appendix_C.tex
@@ -1,5 +1,5 @@
 %------------------------------------------------------------------------------
-\chapter{Problems with segment selection algorithm for new triggers} 
+\chapter{Challenges with segment selection algorithm for new triggers} 
 \label{sec:app_3}
 %------------------------------------------------------------------------------
 \begin{figure}[t!]
@@ -15,7 +15,7 @@ Fig~\ref{fig:bad_segment_selection} shows an event where the segmentation algori
 
 As mentioned before in Outlook a properly tuned segmentation algorithm could also help the neutrino search with new triggers. Fig~\ref{fig:good_segment_selection} shows an event where the MoPS signal is selected with a start time of 200ns but is out of time with other stations with start times close to 240ns. A segment selection algorithm could help in this case to select the correct segment for the station with MoPS trigger.
 
-Fig~\ref{fig:bad_ang_fit} shows an example of an event with a bad angular fit. The indication of the bad quality can only be gauged via the $\chi^2_{red}$ and does not show up in the error on zenith angle. Such events though small in number are essential to be excluded from the analysis to avoid any bias in the final result. This is done with the Angular fit quality cut described before. 
+Fig~\ref{fig:bad_ang_fit} shows an example of an event with a bad angular fit. The indication of the bad quality can only be gauged via the $\chi^2_{\text{red}}$ and does not show up in the error on zenith angle. Such events though small in number are essential to be excluded from the analysis to avoid any bias in the final result. This is done with the Angular fit quality cut described before. 
 
 The event shown in fig~\ref{fig:bad_fisher} shows an example of an event which had an evaluated Fisher value close to the cut value. The event had no peculiar feature which could classify it as a neutrino or otherwise.
 
