--- a/thesis_skel/thesis_appendix_E.tex
+++ b/thesis_skel/thesis_appendix_E.tex
@@ -21,7 +21,7 @@ The previous version of the Module sequence is presented below:
     \null\qquad \quad   <module> SdBaselineFinderKG </module>\\
     \null\qquad \quad   <module> SdTraceCalibratorOG </module>\\
     \null\qquad \quad   <module> SdSignalRecoveryKLT </module>\\
-    \null\qquad \quad  <!-- Special Module to handle station with double peaks -->\\
+    \null\qquad \quad  <!--Special Module to handle station with double peaks-->\\
     \null\qquad \quad   <module> doublePeaketector </module>\\
     \null\qquad \quad  <!-- Rerunning SD Calibration -->\\
     \null\qquad \quad   <module> SdCalibratorUSC </module>\\
@@ -78,6 +78,6 @@ The new version of the Module sequence is presented below:
    </sequenceFile>\\
 \endgroup
 
-Since 2011 the modules in Offline have gone through a considerable amount of changes. The old \textit{SdCalibratorOG} module was split into six separate modules for better future adaptability. This change also came with some improvements in the calibration process which can be found in more detail in~\cite{}. The \textit{doublePeaketector} was also slightly updated by the author to fit the coding style of the $\mathrm{\overline{Off}\underline{line}}$ framework. The earlier used \textit{SdCalibratorUSC} is no longer a part of the current framework but was thoroughly checked against the currently use calibration modules. The only difference that was observed was a snippet of code setting stations with multiple peaks to a specific error code and rejected the station with the error code. This functionality is envisioned to be transferred to other modules to simplify the analysis. For the result presented in this section this change has not been implemented yet and the standard calibration modules are used. \textit{SdEventSelectorUBA} was found to be very similar to the currently used \textit{SdEventSelectorOG} while \textit{SdTopDownSelectorUBA} has been replaced by \textit{SdTopDownSelector}. The last replacement is not perfect and is currently being improved to mimic the old module. The last change involved breaking down the \textit{simpleRec} module which was responsible for some of the quality cuts implemented in the DG$\mathrm{_{high}}$ and also implemented a plane and curved angular reconstruction. The angular reconstruction part was replaced by the \textit{SdPlaneFitOG} and \textit{LDFFinderKG} modules to do the plane and curved shower front-fit respectively. The other analysis cuts from the module were implemented in a standalone program which analyses the ADSTs produced after detector reconstruction. 
+Since 2011 the modules in Offline have gone through a considerable amount of changes. The old \textit{SdCalibratorOG} module was split into six separate modules for better future adaptability. This change also came with some improvements in the calibration process which can be found in more detail in~\cite{Baseline_update}. The \textit{doublePeaketector} was also slightly updated by the author to fit the coding style of the $\mathrm{\overline{Off}\underline{line}}$ framework. The earlier used \textit{SdCalibratorUSC} is no longer a part of the current framework but was thoroughly checked against the currently use calibration modules. The only difference that was observed was a snippet of code setting stations with multiple peaks to a specific error code and rejected the station with the error code. This functionality is envisioned to be transferred to other modules to simplify the analysis. For the result presented in this section this change has not been implemented yet and the standard calibration modules are used. \textit{SdEventSelectorUBA} was found to be very similar to the currently used \textit{SdEventSelectorOG} while \textit{SdTopDownSelectorUBA} has been replaced by \textit{SdTopDownSelector}. The last replacement is not perfect and is currently being improved to mimic the old module. The last change involved breaking down the \textit{simpleRec} module which was responsible for some of the quality cuts implemented in the DG$\mathrm{_{high}}$ and also implemented a plane and curved angular reconstruction. The angular reconstruction part was replaced by the \textit{SdPlaneFitOG} and \textit{LDFFinderKG} modules to do the plane and curved shower front-fit respectively. The other analysis cuts from the module were implemented in a standalone program which analyses the ADSTs produced after detector reconstruction. 
 
 After all the changes were implemented to the \textit{Modulesequence} and the DG$\mathrm{_{high}}$ analysis was rewritten in the exact same way as~\cite{PierreAuger:2011cpc}. The neutrino identification efficiency was evaluated using a simulation sample having a primary energy of $10^{19}$eV with zenith angle of $75^\circ$ which is the last bin of the DG$\mathrm{_{low}}$ analysis range. The identification efficiency was found to be \textbf{0.52}. This is very close to the identification efficiency of \textbf{\textit{0.58}} which was evaluated with the previous implementation of the analysis for the same energy and the same zenith angle. This shows that the new implementation of the analysis is consistent with the old implementation and can be used for the analysis. The next steps involve testing the analysis on a larger sample of events and comparing the results with the old analysis. The analysis will also be tested on the data to check if the results are consistent with the old analysis. The work is still in progress and requires further testing and validation before it can be used for the analysis. 
