--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -3210,6 +3210,11 @@ author =  {Pierre Billoir}
   month     = {7},
   year      = {2007}
 }
+@misc{Baseline_update,
+  author       = {Tobias Schulz and others},
+  title        = {GAP2022-045, New Baseline Algorithm for UB Traces (Auger key protected)},
+  year         = {2022}
+}
 @PhDThesis{Baust:2008,
 	author = "A. Baust et al.",
 	title  = "Design, construction and test of a GEM-detector",
