--- a/thesis_skel/thesis_appendix_D.tex
+++ b/thesis_skel/thesis_appendix_D.tex
@@ -3,7 +3,7 @@
 \label{sec:app_4}
 %------------------------------------------------------------------------------
 
-As mentioned before the Fisher Linear Discriminant analysis with a standalone python program (available on Gitlab) and checked against the inbuilt scikit-learn library. The Fisher polynomial of the form described in eq.~\ref{eq:fisher_poly_new} which was trained separately for five angular sub-regions. The results of the Fisher Coefficients, $C_i$ for each angular region is given below in~\ref{Normalised Fisher coefficients obtained for each angular region}. 
+As mentioned before the Fisher Linear Discriminant analysis with a standalone python program (available on Gitlab) and checked against the inbuilt scikit-learn library. The Fisher polynomial of the form described in eq.~\ref{eq:fisher_poly_new} which was trained separately for five angular sub-regions. The results of the Fisher Coefficients, $C_i$ for each angular region is given below in~\ref{subtab:Fish_Coeff}. 
 Further, as mentioned before the cut to establish the separation between the background and training sample is evaluated by fitting the tail of the background distribution to an exponential function in each angular region such that 0.2 events are expected to pass the cut in 20 years as mentioned in sec.~\ref{subsubsec:nu_sel_fisher_cut}. The fit parameters obtained after fitting $\mathrm{e^{a-bx}}$ to the tail of the Fisher distribution are given in~\ref{subtab:Fish_fit_params}. The cut values were already mentioned before in table~\ref{tab:Selection_summ}.
 
 
@@ -42,6 +42,6 @@ Further, as mentioned before the cut to establish the separation between the bac
     \caption{Fit parameters obtained after fitting $\mathrm{e^{a-bx}}$ to the tail of the Fisher distribution.}
     \label{subtab:Fish_fit_params}
     \end{subtable}
-    \caption*{Table to test captions and labels.}
+    \caption{Summary of Fisher Linear Discriminant analysis.}
     \label{tab:Fish_analysis}
   \end{table}
