--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -12,13 +12,13 @@
 \end{figure}
 \todo{Modify this figure more}
 
-The Pierre Auger Observatory~\cite{Auger:2015} is the largest CR observatory in the world. Located outside Malargüe in the Argentinian \textit{pampas}, the observatory spans across an area of 3000 km$^2$. Originally conceptualized in the 1990s, it was built in the early 2000s and fully completed in 2008. Geographically the site is located near the base of the Andes at an altitude of 1400 m above sea level and is relatively flat across its whole span. The Observatory was designed to detect CR-induced EASs having primary energy of $10^{17}$eV to $10^{20}$eV and beyond. It does so by identifying the EAS via two different complementary detecting components: \textit{\acrlong{SD}} array (\acrshort{SD}) and the \textit{Fluorescence Detector} (\acrshort*{FD}). A schematic of the observatory is shown in Fig.~\ref{fig:Auger_map}. The SD consists of 1660 water Cherenkov tanks spread in a triangular grid with 1.5 km spacing. The FD consists of four sites with 27 telescopes located at the edges of the ground array and overlooking the sky above. The Observatory also consists of various atmospheric monitoring devices such as LIDARs~\cite{BENZVI2007171}, laser facilities~\cite{article_clf,Lawrence_Wiencke_2009} and other weather sensors to constantly monitor the atmosphere which is important for FD operation. With the AugerPrime upgrade of the Observatory which is scheduled to be finished in 2024 two new detecting components are being added: The \textit{\acrlong{RD}} (\acrshort{RD})~\cite{Horandel:2023XL} and the \textit{\acrlong{UMD}} (\acrshort{UMD})~\cite{AbdulHalim:2023ZF}. The tanks are also being upgraded with the addition of a scintillator on top~\cite{Cataldi:2021uwd}. The individual components of the new upgrade are not discussed in detail since they are not used in the context of this thesis but only AugerPrime as a whole and its potential for detecting neutrinos at the Pierre Auger Observatory is discussed later.
+The Pierre Auger Observatory~\cite{Auger:2015} is the largest CR observatory in the world. Located outside Malargüe in the Argentinian \textit{pampas}, the observatory spans across an area of 3000 km$^2$. Originally conceptualized in the 1990s, it was built in the early 2000s and fully completed in 2008. Geographically the site is located near the base of the Andes at an altitude of 1400 m above sea level and is relatively flat across its whole span. The observatory was designed to detect CR-induced EASs having primary energy of $10^{17}$eV to $10^{20}$eV and beyond. It does so by identifying the EAS via two different complementary detecting components: \textit{\acrlong{SD}} array (\acrshort{SD}) and the \textit{Fluorescence Detector} (\acrshort*{FD}). A schematic of the observatory is shown in Fig.~\ref{fig:Auger_map}. The SD consists of 1660 water Cherenkov tanks spread in a triangular grid with 1.5 km spacing. The FD consists of four sites with 27 telescopes located at the edges of the ground array and overlooking the sky above. The observatory also consists of various atmospheric monitoring devices such as LIDARs~\cite{BENZVI2007171}, laser facilities~\cite{article_clf,Lawrence_Wiencke_2009} and other weather sensors to constantly monitor the atmosphere which is important for FD operation. With the AugerPrime upgrade of the observatory which is scheduled to be finished in 2024 two new detecting components are being added: The \textit{\acrlong{RD}} (\acrshort{RD})~\cite{Horandel:2023XL} and the \textit{\acrlong{UMD}} (\acrshort{UMD})~\cite{AbdulHalim:2023ZF}. The tanks are also being upgraded with the addition of a scintillator on top~\cite{Cataldi:2021uwd}. The individual components of the new upgrade are not discussed in detail since they are not used in the context of this thesis but only AugerPrime as a whole and its potential for detecting neutrinos at the Pierre Auger Observatory is discussed later.
 
-Even though, the primary objective of the Pierre Auger Observatory is UHECR physics it is also sensitive to the neutrino induced EAS signature via both the SD and FD. The low neutrino interaction probability requires a detector that is always active. The high duty cycle of the SD $\simeq 100$\% compared to a limited duty cycle of the FD $\simeq 15$\% makes SD the more probable of the detector to detect neutrinos. This has already been shown in previous neutrino searches at Auger where the search with the SD provides the most stringent limits to the diffuse flux of ultra-high-energy neutrinos~\cite{Aab_2019_diffuse}. This chapter aims to provide a short review of the different components of the Observatory with a focus on the SD and its trigger system since it is the primary detector used for the analysis presented in this thesis. 
+Even though, the primary objective of the Pierre Auger Observatory is UHECR physics it is also sensitive to the neutrino induced EAS signature via both the SD and FD. The low neutrino interaction probability requires a detector that is always active. The high duty cycle of the SD $\simeq 100$\% compared to a limited duty cycle of the FD $\simeq 15$\% makes SD the more probable of the detector to detect neutrinos. This has already been shown in previous neutrino searches at Auger where the search with the SD provides the most stringent limits to the diffuse flux of ultra-high-energy neutrinos~\cite{Aab_2019_diffuse}. This chapter aims to provide a short review of the different components of the observatory with a focus on the SD and its trigger system since it is the primary detector used for the analysis presented in this thesis. 
 
 \section{Fluorescence Detector}
 \label{sec:Fl_det}
-The Fluorescence Detector system at the Pierre Auger Observatory consists of an array of Fluorescence telescopes that are constantly looking inwards over the surface detector array trying to measure the nitrogen fluorescence induced by the EAS. The FD consists of 24 telescopes located at four different small hills (Coihueco, Los Morados, Loma Amarilla and Los Leones). The Coihueco site also consists of \gls{HEAT} which can be tilted upwards to extend the field of view at the Coiheuco site. Each of the 24 telescopes has a field of view of $30^{\circ} \times 30^{\circ}$ in azimuth and elevation. The combination of the telescopes gives an azimuth coverage of $180^{\circ}$. The HEAT telescopes can extend the field of view by a further $30^{\circ}$ in elevation. This gives a 100\% triggering efficiency for EAS above $10^{19}$eV for FD and above $10^{17}$eV with the inclusion of HEAT. Currently, the FD is always operated in combination with SD. As mentioned before the measured fluorescence light gives the deposited shower energy which is about 90\% of the total. The remaining 10\% which is carried by non-fluorescence producing particles such as neutrinos and muons is corrected with simulations~\cite{Abraham_2010_FD}. The expected fluorescence yield (combined for all wavelengths) is affected by the temperature, pressure and humidity of air~\cite{Rosado:2014bya}. This is constantly monitored at the Observatory via several monitoring instruments. Each FD site is equipped with a LIDAR station which continuously monitors the aerosol profile, cloud and sky cameras which photograph the sky to estimate the cloud coverage and wind and rain sensors for the safe functioning of the FD telescopes. Two laser facilities \gls{CLF} and \gls{XLF} have also been functional since 2003 and 2008 respectively. These help provide hourly measurements of the atmospheric aerosol content and can also be used to measure FD performance. 
+The Fluorescence Detector system at the Pierre Auger Observatory consists of an array of Fluorescence telescopes that are constantly looking inwards over the surface detector array trying to measure the nitrogen fluorescence induced by the EAS. The FD consists of 24 telescopes located at four different small hills (Coihueco, Los Morados, Loma Amarilla and Los Leones). The Coihueco site also consists of \gls{HEAT} which can be tilted upwards to extend the field of view at the Coiheuco site. Each of the 24 telescopes has a field of view of $30^{\circ} \times 30^{\circ}$ in azimuth and elevation. The combination of the telescopes gives an azimuth coverage of $180^{\circ}$. The HEAT telescopes can extend the field of view by a further $30^{\circ}$ in elevation. This gives a 100\% triggering efficiency for EAS above $10^{19}$eV for FD and above $10^{17}$eV with the inclusion of HEAT. Currently, the FD is always operated in combination with SD. As mentioned before the measured fluorescence light gives the deposited shower energy which is about 90\% of the total. The remaining 10\% which is carried by non-fluorescence producing particles such as neutrinos and muons is corrected with simulations~\cite{Abraham_2010_FD}. The expected fluorescence yield (combined for all wavelengths) is affected by the temperature, pressure and humidity of air~\cite{Rosado:2014bya}. This is constantly monitored at the observatory via several monitoring instruments. Each FD site is equipped with a LIDAR station which continuously monitors the aerosol profile, cloud and sky cameras which photograph the sky to estimate the cloud coverage and wind and rain sensors for the safe functioning of the FD telescopes. Two laser facilities \gls{CLF} and \gls{XLF} have also been functional since 2003 and 2008 respectively. These help provide hourly measurements of the atmospheric aerosol content and can also be used to measure FD performance. 
 
 
 % \begin{figure}[t!]
@@ -194,7 +194,7 @@ The new triggers particularly improve the trigger efficiency and sensitivity for
 \label{sec:Sur_det_trig_array}
 T2 level triggers aim to apply higher constraints to T1 triggers. A T1-ToT trigger is automatically updated to a T2-ToT trigger while a T1-TH trigger requires the signal to pass a higher threshold condition of >3.2$I_{\text{VEM}}^{\text{peak}}$ for three coincident PMTs to get upgraded to T2-TH. For two (one) working PMTs the threshold is stricter at >3.8 (4.5)$I_{\text{VEM}}^{\text{peak}}$. After the T2 level, the expected station rate of events drops to $\sim$23 Hz. The T2 level triggers from all stations are sent to the CDAS to form a global trigger.
 
-The T3 level aims to build a condition based on both spatial and temporal combinations of stations that have passed the T2 condition. It again has two modes with only one needed to be satisfied to form a successful T3. Both of these conditions use a unit of detector called the crown, $C_n$. The crown as shown in Fig.~\ref{fig:T3_config} is a set of concentric hexagons centred around each station with $n$ giving the order of the surrounding hexagons, 1 being the nearest. The first mode $ToT2C_1\&3C_2$ (\ref{sub:fig:T3_config_1}) requires three SD stations which have passed T2-ToT criteria. It further requires at least one station to be located in the first crown denoted by $2C_1$ and the last to be located in the second crown ($3C_2$). The trigger is efficient in selecting compact vertical showers ($\theta < 60^{\circ}$) and selects about 90\% of the physical events at the array. The second mode $2C_1\&3C_2\&4C_4$ (\ref{sub:fig:T3_config_2}) is less restrictive and aims to select showers with moderate compactness. It requires a 4-fold coincidence of stations having any type of T2s (T2-ToT or T2-TH). The first two neighbouring stations must be again located in the first and second crown, but the last station can be as far as the fourth crown. This mode is more efficient in selecting inclined showers which typically being rich in muons have a sparse detector triggering pattern. Along with the spatial requirements both of the modes also require each of the T2 triggers in the stations to be within (3+5C$_n$)$\mathrm{\mu}$s of the first one. Once either of the modes is satisfied all the FADC signals from the detectors passing T2 as well as signals from the detectors only passing T1 which are within 30$\mathrm{\mu}$s of the T3 are stored by CDAS as a part of the event. This process is described in more detail in~\cite{Auger:2015}. With the present trigger setup, the Observatory records about 3 million SD events per year~\cite{Auger:2015}. 
+The T3 level aims to build a condition based on both spatial and temporal combinations of stations that have passed the T2 condition. It again has two modes with only one needed to be satisfied to form a successful T3. Both of these conditions use a unit of detector called the crown, $C_n$. The crown as shown in Fig.~\ref{fig:T3_config} is a set of concentric hexagons centred around each station with $n$ giving the order of the surrounding hexagons, 1 being the nearest. The first mode $ToT2C_1\&3C_2$ (\ref{sub:fig:T3_config_1}) requires three SD stations which have passed T2-ToT criteria. It further requires at least one station to be located in the first crown denoted by $2C_1$ and the last to be located in the second crown ($3C_2$). The trigger is efficient in selecting compact vertical showers ($\theta < 60^{\circ}$) and selects about 90\% of the physical events at the array. The second mode $2C_1\&3C_2\&4C_4$ (\ref{sub:fig:T3_config_2}) is less restrictive and aims to select showers with moderate compactness. It requires a 4-fold coincidence of stations having any type of T2s (T2-ToT or T2-TH). The first two neighbouring stations must be again located in the first and second crown, but the last station can be as far as the fourth crown. This mode is more efficient in selecting inclined showers which typically being rich in muons have a sparse detector triggering pattern. Along with the spatial requirements both of the modes also require each of the T2 triggers in the stations to be within (3+5C$_n$)$\mathrm{\mu}$s of the first one. Once either of the modes is satisfied all the FADC signals from the detectors passing T2 as well as signals from the detectors only passing T1 which are within 30$\mathrm{\mu}$s of the T3 are stored by CDAS as a part of the event. This process is described in more detail in~\cite{Auger:2015}. With the present trigger setup, the observatory records about 3 million SD events per year~\cite{Auger:2015}. 
 
 % \begin{figure}[t!]
 %   \centering
@@ -219,9 +219,9 @@ The T5 fiducial triggers help improve the quality of the showers selected, espec
 \section{AugerPrime}
 \label{sec:Aug_prime}
 
-AugerPrime~\cite{ANASTASI2022167497} also called Auger Phase 2,  is the ongoing upgrade of the Pierre Auger Observatory to improve its sensitivity and detection capabilities. The upgrade aims to both improve the already present detector systems and also plans to add new components to the Observatory. One of the key aims of the \textit{AugerPrime} upgrade is to improve the estimation of the primary CR mass measured by the SD. This is done by the installation of plastic scintillators, \textit{Surface Scintillator Detectors} (SSDs)~\cite{Cataldi:2021uwd} on top of the WCD tanks. The differing responses of WCDs and the SSDs to the electromagnetic and muonic components help enhance the overall mass sensitivity of the detector for vertical showers. The upgrade also replaces the SD electronics (\textit{unified board} and SD front-end board) with the \textit{\acrlong{UUB}} (\acrshort{UUB})~\cite{PierreAuger:2021nnx} and adds a \textit{small} PMT (sPMT)~\cite{PierreAuger:2023clx} to the WCD. The UUBs allow for better station level processing power to account for the SSD and also add a faster sampling rate and better timing accuracy for the SD. The sPMT helps increase the dynamic range of the WCD by reducing the saturated signals in the stations closest to the shower axis. The \textit{AugerPrime} upgrade also includes the deployment of plastic scintillators beneath the WCD tanks, the \acrshort{UMD}~\cite{AbdulHalim:2023ZF} as an extension of AMIGA~\cite{PierreAuger:2021fhj} across the SD-750 and SD-433 sub arrays. The UMD is sensitive to the penetrating muon component of the EAS is very useful for extending the lower energy detection range of the Observatory and can also help in photon searches~\cite{PierreAuger:2023nkh}. Deployment of radio antennas on top of each WCD to form \textit{\acrlong{RD}}~\cite{Horandel:2023XL} is also a part of \textit{AugerPrime}. This will allow for the measurement of the radio component of the EAS which originates primarily from the electromagnetic component. Such a measurement especially at very inclined zenith angles will allow for an improved mass estimation even for higher zenith angles where the SSD is insensitive. Additionally, increasing the duty cycle of the FD by operating the telescopes during higher night sky brightness periods with reduced PMT gain is also a part of the upgrade. 
+AugerPrime~\cite{ANASTASI2022167497} also called Auger Phase 2,  is the ongoing upgrade of the Pierre Auger Observatory to improve its sensitivity and detection capabilities. The upgrade aims to both improve the already present detector systems and also plans to add new components to the observatory. One of the key aims of the \textit{AugerPrime} upgrade is to improve the estimation of the primary CR mass measured by the SD. This is done by the installation of plastic scintillators, \textit{Surface Scintillator Detectors} (SSDs)~\cite{Cataldi:2021uwd} on top of the WCD tanks. The differing responses of WCDs and the SSDs to the electromagnetic and muonic components help enhance the overall mass sensitivity of the detector for vertical showers. The upgrade also replaces the SD electronics (\textit{unified board} and SD front-end board) with the \textit{\acrlong{UUB}} (\acrshort{UUB})~\cite{PierreAuger:2021nnx} and adds a \textit{small} PMT (sPMT)~\cite{PierreAuger:2023clx} to the WCD. The UUBs allow for better station level processing power to account for the SSD and also add a faster sampling rate and better timing accuracy for the SD. The sPMT helps increase the dynamic range of the WCD by reducing the saturated signals in the stations closest to the shower axis. The \textit{AugerPrime} upgrade also includes the deployment of plastic scintillators beneath the WCD tanks, the \acrshort{UMD}~\cite{AbdulHalim:2023ZF} as an extension of AMIGA~\cite{PierreAuger:2021fhj} across the SD-750 and SD-433 sub arrays. The UMD is sensitive to the penetrating muon component of the EAS is very useful for extending the lower energy detection range of the observatory and can also help in photon searches~\cite{PierreAuger:2023nkh}. Deployment of radio antennas on top of each WCD to form \textit{\acrlong{RD}}~\cite{Horandel:2023XL} is also a part of \textit{AugerPrime}. This will allow for the measurement of the radio component of the EAS which originates primarily from the electromagnetic component. Such a measurement especially at very inclined zenith angles will allow for an improved mass estimation even for higher zenith angles where the SSD is insensitive. Additionally, increasing the duty cycle of the FD by operating the telescopes during higher night sky brightness periods with reduced PMT gain is also a part of the upgrade. 
 
-In the context of this thesis, the data from the ongoing upgrade and the preceding test array were not used. However, it is important to mention that the higher sampling rate available with the UUBs and the addition of RD could offer a way to improve the current neutrino analysis. The higher sampling rate could help in reducing the effect of the background muons especially at lower zenith angles ($\sim 60^{\circ}$) whereas the RD in conjunction with WCD could help improve the neutrino detection efficiency for higher zenith angles ($\gtrsim 75^{\circ}$) by improving the T3 efficiency. Also, a general increase in the statistics and continued data taking till the 2030s will help enhance the limits in case of non-detection of cosmogenic neutrinos which have further important implications for the CR spectrum especially for the cutoff as discussed before. The upgrade will also help improve the multi-messenger astronomy capabilities of the Observatory. 
+In the context of this thesis, the data from the ongoing upgrade and the preceding test array were not used. However, it is important to mention that the higher sampling rate available with the UUBs and the addition of RD could offer a way to improve the current neutrino analysis. The higher sampling rate could help in reducing the effect of the background muons especially at lower zenith angles ($\sim 60^{\circ}$) whereas the RD in conjunction with WCD could help improve the neutrino detection efficiency for higher zenith angles ($\gtrsim 75^{\circ}$) by improving the T3 efficiency. Also, a general increase in the statistics and continued data taking till the 2030s will help enhance the limits in case of non-detection of cosmogenic neutrinos which have further important implications for the CR spectrum especially for the cutoff as discussed before. The upgrade will also help improve the multi-messenger astronomy capabilities of the observatory. 
 
 \begin{figure}[t!]
   \centering
@@ -233,7 +233,7 @@ In the context of this thesis, the data from the ongoing upgrade and the precedi
 \section{The \texorpdfstring{$\overline{\text{Off}} \underline{\text{line}}$}{} Framework}
 \label{sec:Offline}
 
-The $\mathrm{\overline{Off} \underline{line}}$ framework~\cite{Argiro:2007qg,PierreAuger:2023cqe} is the C++ based software developed internally by the Pierre Auger Observatory to reconstruct air showers and perform cosmic ray analysis. It can process and reconstruct both air shower simulation outputs from generators such as CORSIKA~\cite{Heck:1998vt}, Aires~\cite{Sciutto:1999jh} etc. and the data recorded at the Observatory. $\mathrm{\overline{Off} \underline{line}}$ aims to standardize basic quantities such as detector response for simulations and important variables inferred from reconstructing an EAS for the entire collaboration. This helps in providing the collaboration with a homogenous backbone to build physics analysis. It also allows for the physics analysis to be stored and implemented within the framework which helps in leading and optimising productivity. The modular design allows it to be constantly updated for the addition of new functionality and detectors. The framework is available internally on GitLab to the entire Collaboration with regularly planned public releases. $\mathrm{\overline{Off} \underline{line}}$ consists of three fundamental constituents as shown in Fig.~\ref{fig:Offline_schematic}. These are summarised below:
+The $\mathrm{\overline{Off} \underline{line}}$ framework~\cite{Argiro:2007qg,PierreAuger:2023cqe} is the C++ based software developed internally by the Pierre Auger Observatory to reconstruct air showers and perform cosmic ray analysis. It can process and reconstruct both air shower simulation outputs from generators such as CORSIKA~\cite{Heck:1998vt}, Aires~\cite{Sciutto:1999jh} etc. and the data recorded at the observatory. $\mathrm{\overline{Off} \underline{line}}$ aims to standardize basic quantities such as detector response for simulations and important variables inferred from reconstructing an EAS for the entire collaboration. This helps in providing the collaboration with a homogenous backbone to build physics analysis. It also allows for the physics analysis to be stored and implemented within the framework which helps in leading and optimising productivity. The modular design allows it to be constantly updated for the addition of new functionality and detectors. The framework is available internally on GitLab to the entire Collaboration with regularly planned public releases. $\mathrm{\overline{Off} \underline{line}}$ consists of three fundamental constituents as shown in Fig.~\ref{fig:Offline_schematic}. These are summarised below:
 
 
 
